objects/RegulatoryTrxnFeeItem.object
<CustomObject>
    <fields>
        <fullName>Access_DB_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Access DB External ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Asso_Loc_Id__c</fullName>
        <label>Asso_Loc_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationNumber__c</fullName>
        <label>ConfirmationNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Convenience_Fee__c</fullName>
        <label>Convenience Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EpayResultMessage__c</fullName>
        <label>EpayResultMessage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>Regulatory Transaction Fee Items</relationshipLabel>
        <relationshipName>Regulatory_Transaction_Fee_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Penalties__c</fullName>
        <formula>IF(CONTAINS(LOWER(Name), &quot;penalty&quot;), FeeAmount, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Penalties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RCNumber__c</fullName>
        <label>RCNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettlementSubmissionDate__c</fullName>
        <label>SettlementSubmissionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Due</fullName>
                    <default>true</default>
                    <label>Due</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxamount__c</fullName>
        <label>Taxamount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>referenceId__c</fullName>
        <label>referenceId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_RegulatoryTrxnFeeItem</fullName>
        <filterScope>Everything</filterScope>
        <label>All Regulatory Transaction Fee Items</label>
    </listViews>
    <listViews>
        <fullName>All_RegulatoryTrxnFeeItem</fullName>
        <filterScope>Everything</filterScope>
        <label>All Regulatory Transaction Fee Items</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>